<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.AboutActivity">

    <include
        layout="@layout/title_bar"
        android:id="@+id/title_bar" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textColor="@color/application_theme_color"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@id/title_bar" />

    <TextView
        android:id="@+id/tv_app_version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textColor="@color/application_theme_color"
        android:text="@string/app_version_text"
        android:layout_above="@id/tv_app_version" />

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/application_theme_color"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/b_check_for_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/background_click_button"
        android:layout_below="@id/tv_app_version"
        android:textColor="@android:color/white"
        android:text="@string/check_update_text"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/copyright_text"
        android:textColor="@color/application_theme_color" />

</RelativeLayout>