<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.activities.GalleryActivity">

    <include
        layout="@layout/title_bar"
        android:id="@+id/title_bar" />


    <android.support.design.widget.TabLayout
        android:id="@+id/tl_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        app:tabMode="fixed">

        <android.support.design.widget.TabItem
            android:id="@+id/ti_photo"
            android:text="@string/photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TabItem
            android:id="@+id/ti_video"
            android:text="@string/video_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TabLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_gallery_item_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/tl_tabs" />

    <LinearLayout
        android:id="@+id/ll_option_box"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:visibility="gone"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tv_select_all"
            android:text="@string/select_all_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_text"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:gravity="center" />

    </LinearLayout>


</RelativeLayout>