<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:background="@drawable/background_corner_round_function">

    <TextView
        android:id="@+id/tv_confirm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_button_holder"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:textColor="@android:color/white"
        android:text="@string/confirm_clear_cache_text"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ll_button_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_cancel_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/background_click_button"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/b_confirm_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/background_risk_button"
            android:text="@string/confirm_text"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>